# translation-service

./: .env.sample  .gitignore  Makefile  README.md  build.Dockerfile
src/: CMakeLists.txt  consts.h  env.h  server.cpp  translation.h
