find_package(Threads REQUIRED)
add_executable(mts-server server.cpp)
target_link_libraries(mts-server bergamot-translator)
target_link_libraries(mts-server ${Boost_LIBRARIES})
target_link_libraries(mts-server ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(mts-server "-Wl,--start-group" ${MKL_LIBRARIES} "-Wl,--end-group -lpthread -lm -ldl")
