find_package(Threads REQUIRED)
add_executable(mts server.cpp)
target_link_libraries(mts bergamot-translator)
target_link_libraries(mts ${Boost_LIBRARIES})
target_link_libraries(mts ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(mts "-Wl,--start-group" ${MKL_LIBRARIES} "-Wl,--end-group -lpthread -lm -ldl")
